--- a/Mobile-Price-Prediction-Using-ML-Algorithms/requirements.txt
+++ b/Mobile-Price-Prediction-Using-ML-Algorithms/requirements.txt
@@ -1,10 +1,13 @@
-streamlit
-pandas
-numpy
-scikit-learn
-plotly
-matplotlib
-seaborn
-joblib
+python-3.11
+
 pickle
-Pillow
+
+streamlit==1.32.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.3.2
+plotly==5.19.0
+matplotlib==3.8.2
+seaborn==0.13.2
+joblib==1.3.2
+Pillow==9.5.0
