--- a/Mobile-Price-Prediction-Using-ML-Algorithms/requirements.txt
+++ b/Mobile-Price-Prediction-Using-ML-Algorithms/requirements.txt
@@ -1,8 +1,9 @@
 streamlit==1.32.0
-pandas==2.2.2
+pandas==2.2.1
 numpy==1.26.4
 scikit-learn==1.3.2
 plotly==5.19.0
 matplotlib==3.8.2
-seaborn==0.13.2
+seaborn==0.13.0
 joblib==1.3.2
+Pillow==10.1.0
